styles/styles.css
@font-face {
    font-family: VCR;
    src: url(../media/vcr.ttf);
}

body {
    display: grid;
    grid-template-columns: 40% 20% 40%;
    height: 95vh;
    overflow-y: hidden;
    font-family: VCR;
    letter-spacing: -2px;
    user-select: none;
    margin: 0;
    background-image: url('../media/textures/grass.png');
    background-size: 11%;
    background-repeat: repeat;
    image-rendering: pixelated; 
    image-rendering: crisp-edges;
    background-color: darkgreen;
    touch-action: manipulation;
}

@keyframes flashText {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
}

#click-prompt {
    text-align: center;
    color: gold;
    font-size: 200%;
    animation: flashText infinite 1s;
    animation-timing-function: steps(1); 
}

#screen-left, #screen-right {
    background-image: url('../media/textures/sky.png');
    background-size: 55%;
    background-repeat: repeat;
    image-rendering: pixelated; 
    image-rendering: crisp-edges;
}

#screen-center {
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: rgb(109, 68, 14);
    cursor: not-allowed;
    background-image: url('../media/textures/bark_1.png');
    background-size: 50%;
    background-repeat: repeat;
    image-rendering: pixelated; 
    image-rendering: crisp-edges;
}

#score {
    z-index: 3;
    color: gold;
    font-size: 400%;
    position: absolute;
    left: 50%;
    translate: -50%;
    margin-top: 5vh;
    width: fit-content;
}

#game-over {
    text-align: center;
    color: gold;
    font-size: 400%;
}

#restart-button {
    display: block;
    margin: auto;
    font-size: 300%;
    color: green;
    background-color: gold;
    border: none;
    font-family: VCR;
}

#player {
    width: 20vh;
    display: block;
    position: absolute;
    bottom: 5vh;
    z-index: 2;
    pointer-events: none;
}

.log-segments {
    margin: auto;
    width: 25vw;
    height: 15.83vh;
    pointer-events: none;
    z-index: 1;
}

#medal {
    display: block;
    margin: auto;
    width: 8vw;
    margin-bottom: 10vh;
}

@media (width <=1024px) {
    body {
        height: 85vh;
        image-rendering: -webkit-optimize-contrast;
    }

    .log-segments {
        width: 60vw;
        height: 12.16vh;
    }

    #player {
        bottom: 3.5vh;
    }

    #medal {
        width: 25vw;
    }
}

